--- a/manuscript/manuscript.Rnw
+++ b/manuscript/manuscript.Rnw
@@ -746,41 +746,99 @@ setkey(top.human.genes,"Gene name")
 \label{tab:top50_human_placenta}
 \end{wraptable}
 
+<<cgb.min.expression,results="hide",echo=FALSE,warnings=FALSE>>=
+cgb.min.expression <- 
+    min(sapply(paste0("CGB",c("","1","2","5","7","8")),
+               function(x){gene.expression(species.name="homo sapiens",gene=x)}))
+cgb.sum.expression <- 
+    sum(sapply(paste0("CGB",c("","1","2","5","7","8")),
+               function(x){gene.expression(species.name="homo sapiens",gene=x)}))
+@ 
+
 The top 50 expressed genes as measured by \ac{FPKM} in the term
 placenta of \textit{Homo sapiens} are shown in
-\fref{tab:top50_human_placenta} with a list of all genes in
-Supplemental Table X. The gene with by far the highest \ac{FPKM} value
+\fref{tab:top50_human_placenta} with all genes with \ac{FPKM} $\ge 50$
+in Supplemental \fref{tab:all_human_placenta}. The gene with by far
+the highest \ac{FPKM} value
+%
 (\Sexpr{gene.expression(species.name="homo sapiens",gene="CSH1")}) %
-in humans is \ac{CSH1}, followed by \ac{CSH2}, and \ac{CSHL1}, all
+%
+in humans is \textit{CSH1}, followed by \textit{CSH2}, and \textit{CSHL1}, all
 three of which are members of a distinct expansion of the growth
-hormone gene family within hominoids. Another member of the growth
+hormone gene family within hominoids (~\ref{fig:galectins_evolution_tree}). Another member of the growth
 hormone gene family, \ac{GH2} (\ac{FPKM}=%
 \Sexpr{gene.expression(species.name="homo sapiens",gene="GH2")}), %
 is also expressed to a high degree in the human placenta
 (\fref{tab:top50_human_placenta}).
 % 
-Ten pregnancy-specific beta-1-glycoprotein genes are highly-expressed
-(\ac{FPKM}>100) in the term placenta of humans, with \ac{PSG4} showing the
+Eleven pregnancy-specific beta-1-glycoprotein genes are highly-expressed
+(\ac{FPKM}$\ge 100$) in the term placenta of humans, with \textit{PSG1} showing the
 greatest degree of expression %
-(\ac{FPKM}=\Sexpr{gene.expression(species.name="homo sapiens",gene="PSG4")}). % 
+(\ac{FPKM}=\Sexpr{gene.expression(species.name="homo sapiens",gene="PSG1")}) % 
+and the pseudogene \textit{PSG10P} showing the least %
+(\ac{FPKM}=\Sexpr{gene.expression(species.name="homo sapiens",gene="PSG10P")}, \fref{fig:psg_evolution_tree}) . %
 These
-genes are members of a hominoid-specific expansion of the
-carcinoembryonic antigen (CEA) family and known to be expressed by the
-syncytiotrophoblast (Lei et al., 1992; Rand and Cross, 2008). Genes
-involved in the production of estrogen (CYP19A1) and progesterone
-(HSD3B1) show exceptionally high expression in the human placenta
-(\ac{FPKM} = 4817.15 and 829.846 respectively), as well as CGA
-(\ac{FPKM}= 4793.08), which generates the alpha subnit of multiple
-human chorionic gonadotropin hormones (Table 2). The genes producing
-the beta subunits of the chorionic gonadotropins (CGB, CGB1, CGB2,
-CGB5, CGB7, CGB8) are either not expressed (CGB8) or expressed
-modestly (FPKM≤20.826; Table 8). Other highly expressed genes in the
-top 50 include members of the hemoglobin family (e.g. HBA1, HBB, HBG2,
-HBA2), the maternally imprinted long noncoding RNA gene H19, genes
-coding for proteins required for growth and/or cell proliferation
-(ADAM12, KISS1, IGF2, GPC3, CSF3R), anticoagulation (TFPI2), and
-glucose transport (SLC2A1) among others (Table 2, Supplemental Table
-X)
+genes are members of a hominoid-specific expansion of the \ac{CEA} family
+and known to be expressed by the syncytiotrophoblast
+\cite{Rawn.ea2008:evolutionregulationandfunction,Lei.ea1992:Cloningandexpressionof}. %
+%
+Genes involved in the production of estrogens (%
+\Sexpr{gene.expression(species.name="homo sapiens",gene="CYP19A1",complete=TRUE)},
+% 
+\Sexpr{gene.expression(species.name="homo sapiens",gene="HSD17B1",complete=TRUE)}, and
+% 
+\Sexpr{gene.expression(species.name="homo sapiens",gene="HSD3B1",complete=TRUE)}%
+% 
+) and progesterone (%
+\Sexpr{gene.expression(species.name="homo sapiens",gene="HSD3B1",complete=TRUE)},
+\Sexpr{gene.expression(species.name="homo sapiens",gene="CYP11A1",complete=TRUE)}, and
+\Sexpr{gene.expression(species.name="homo sapiens",gene="ADM",complete=TRUE)})
+%
+show exceptionally high expression in the human placenta, as well as %
+%
+\textit{CGA} (FPKM=\Sexpr{gene.expression(species.name="homo sapiens",gene="CGA")}, %
+%
+which generates the alpha subnit of multiple human chorionic
+gonadotropin hormones (\fref{tab:top50_human_placenta}). The genes
+producing the beta subunits of the chorionic gonadotropins
+(\textit{CGB}, \textit{CGB1}, \textit{CGB2}, \textit{CGB5},
+\textit{CGB7}, \textit{CGB8}) are either not expressed (%
+%
+\Sexpr{gene.expression(species.name="homo sapiens",gene="CGB8")}
+%
+) have reasonable expression ($\mathrm{FPKM} \ge \Sexpr{cgb.min.expression}$),
+and the sum of their expression is on the order of the expression of
+expression of \textit{CGA}
+($\sum \mathit{CGBs}=\Sexpr{cgb.sum.expression}$ FPKM) .
+%
+%
+Other highly expressed genes in the top 50 include members of the
+hemoglobin family (e.g. \textit{HBA1}, \textit{HBB}, \textit{HBG2},
+\textit{HBA2}), the maternally imprinted long noncoding RNA gene
+\textit{H19}, genes coding for proteins required for growth and/or
+cell proliferation (\textit{ADAM12}, \textit{KISS1}, \textit{IGF2},
+\textit{GPC3}, \textit{CSF3R}), anticoagulation (\textit{TFPI2}), and
+glucose transport (\textit{SLC2A1}) among others
+(\fref{tab:top50_human_placenta}, Supplemental
+\fref{tab:all_human_placenta}).
+
+
+
+\begin{figure}
+<<psg.evolution.tree,echo=FALSE,fig.width=12,fig.height=12,warning=FALSE,message=FALSE>>=
+
+tree.id <-
+    genes.to.tree[combined.fpkm[gene_short_name=="PSG1" & species=="homo sapiens",gene_id],tree]
+gene.tree.table <- trees[[tree.id]]$table
+gene.tree.expression <- combined.fpkm[gene_id %in% gene.tree.table[,gene_id]]
+gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
+plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),gene.tree.table,gene.tree.expression,min.fpkm=5)
+@ 
+\caption{Expression of pregnancy-specific glycoproteins}
+\label{fig:psg_evolution_tree}
+\end{figure}
+
+
 
 \subsection{Bonobo Placenta Transcriptome}
 
