--- a/manuscript/acronyms.tex
+++ b/manuscript/acronyms.tex
@@ -9,6 +9,8 @@
 \acrodef{CSH2}[\textit{CSH2}]{chorionic somatomammotropin hormone 2}
 \acrodef{CSHL1}[\textit{CSHL1}]{chorionic somatomammotropin hormone-like 1}
 \acrodef{GH2}[\textit{GH2}]{growth hormone 2}
+\acrodef{CEA}{carcinoembryonic antigen}
+\acrodef{HSD3B1}[\textit{HSD3B1}]{3-β Hydroxysteroid dehydrogenase 1}
 
 %%% Local Variables:
 %%% mode: latex
